# turjuman-book-translator

./: pyproject.toml
