[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turjuman-book-translator"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = []

# Tell setuptools that *anything* under src/ is importable
[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]          # look inside src/
include = ["*"]          # include every module/package it finds
