[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turjuman-book-translator"
version = "0.0.3"              # bump so Poetry re‑installs
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
# treat *src/* as the project root …
package-dir = {"" = "src"}

# … there are NO real packages (folders with __init__.py we want)
packages = []

# explicitly include the stand‑alone modules that live in src/
py-modules = [
  "translator",
  "nodes",
  "nodes_preprocessing",
  "nodes_translation",
  "nodes_postprocessing",
  "node_workers",
  "chunking",
  "utils",
  "state",
  "providers",
  "exceptions"
]
